[+#] Update Income JS, add styles for left aligned arrows in datatable header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,10 +76,17 @@ body {
     padding: 0px !important;
 }
 
-.modal-body select:not([multiple]) {
+select:not([multiple]) {
     height: 2.5em !important;
 }
 
 #sidebar-menu > ul > li.active>a {
     color: #1d1e3a;
+}
+
+#dataTableBuilder th.sorting_asc,
+#dataTableBuilder th.sorting_desc,
+#dataTableBuilder th.sorting  {
+    background-position-x: 0px;
+    padding-left: 20px;
 }
