--- a/public/css/merchants/app.css
+++ b/public/css/merchants/app.css
@@ -3,11 +3,8 @@
 }
 
 .alert {
-    position: absolute;
-    top: 100%;
-    left: 0;
     font-family: sans-serif;
-    width: max-content;
+    text-align: center;
 }
 
 .registration-field-valid-fail {
