--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -1,3 +1,7 @@
+/*
+ * Created by Ilya Kobus, Appus Studio LP on 7.11.2018
+ */
+
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -375,8 +379,8 @@ template {
     font-style: normal;
 }
 
-/**
- * Base
+/** 
+ * Base 
  */
 
 *, *::before, *::after {
@@ -550,6 +554,39 @@ textarea:-moz-placeholder {color: rgba(255,255,255,0.93)}
 textarea::-moz-placeholder {color: rgba(255,255,255,0.93)}
 textarea::-ms-input-placeholder {color: rgba(255,255,255,0.93)}
 textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
+
+.t-a-center {
+    text-align: center;
+}
+
+.t-a-right {
+    text-align: right;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 170px;
+    padding: 11px 50px;
+    color: #1a1a1a;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid transparent;
+    border-radius: 6px;
+    background-color: #f4e102;
+    transition: all 0.25s linear;
+    cursor: pointer;
+}
+
+.btn--heavy {
+    font-weight: bold;
+}
+
+.btn:hover {
+    background-color: rgba(244, 225, 2, 0.65);
+}
 
 .alert.alert-danger {
     width: 100%;
@@ -1445,6 +1482,18 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     padding: 30px 0;
 }
 
+.main-shop-wrapper.error-page {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
 .main-shop-empty {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1856,6 +1905,33 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     padding: 45px 0 55px;
 }
 
+.form-container-decor {
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 6px;
+}
+
+.form-container-decor--colored {
+    border-color: #e8e8e8;
+}
+
+.form-container-decor--file {
+    width: 100%;
+    background: #f1f0f0 url('../../img/profile-bg-icon.svg') no-repeat center center;
+}
+
+.form-container-decor-inner {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.6%;
+}
+
+.form-container-decor-abs {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .form-line__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1884,6 +1960,11 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     text-align: right;
 }
 
+.form-item__wrapper--text-settings {
+    width: 170px;
+    padding-left: 10px;
+}
+
 .form-item__wrapper--field {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
@@ -1891,8 +1972,32 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     padding-right: 110px;
 }
 
-.form-item__wrapper--files {
+.form-item__wrapper--field-settings {
+    padding-right: 28px;
+}
 
+.form-item__inner-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.form-item__inner--mini {
+    margin-right: 18px;
+    width: 70px;
+}
+
+.form-item__inner--txt {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.form-item__inner--half,
+.form-item__inner--large {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .form-item__list {
@@ -2003,7 +2108,7 @@ input.form-item__inp::placeholder {color: #999;}
 .form-item__area {
     padding: 8px 10px;
     border-color: #e5e5e5;
-}
+ }
 
 textarea.form-item__area::-moz-placeholder {color: #999;}
 textarea.form-item__area::-webkit-input-placeholder {color: #999;}
@@ -2056,6 +2161,466 @@ textarea.form-item__area::placeholder {color: #999;}
     font-family: 'Lato', sans-serif;
     font-weight: 600;
     border-radius: 5px;
+}
+
+/* Edit page */
+.edit-title__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.edit-title {
+    color: #252424;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.edit-price {
+    margin-left: 70px;
+    color: #06974a;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.edit-title-min {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    color: #252424;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.edit-gallery {
+    margin-left: -1.7%;
+    margin-bottom: 24px;
+    font-size: 0;
+}
+
+.edit-item {
+    display: inline-block;
+    margin-bottom: 1.7%;
+    margin-left: 1.7%;
+    width: 18.3%;
+    font-size: 16px;
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.edit-text {
+    margin-bottom: 12px;
+    color: #000;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.5;
+}
+
+.edit-attr__head {
+    margin-bottom: 18px;
+    color: #252424;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.edit-attr__wrapper {
+    padding: 38px 0 22px;
+}
+
+.edit-attr__line {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 22px;
+}
+
+.edit-attr__title {
+    margin-right: 22px;
+    width: 110px;
+    color: #333;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.12;
+    text-align: right;
+}
+
+.edit-attr__descr {
+    color: #999;
+    font-size: 16px;
+    line-height: 1.25;
+}
+
+.edit-bottom-m {
+    margin-bottom: 10px;
+}
+
+.edit-photo-wrapper {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.edit-photo-wrapper input {
+    display: none;
+}
+
+.edit-photo-btn {
+    padding: 11px 10px;
+    min-width: 150px;
+}
+
+.edit-area {
+    color: #353535;
+    font-size: 16px;
+    border: none;
+}
+
+.edit-line-desc {
+    color: #2191fc;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+/* Settings Page */
+.settings-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.settings-user {
+    margin-right: 30px;
+    width: 280px;
+}
+
+.settings-general {
+    color: #1d1d1d;
+    font-size: 24px;
+}
+
+.settings-general__title {
+    position: relative;
+    padding-bottom: 24px;
+    font-weight: bold;
+}
+
+.settings-general__title::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 70px;
+    height: 4px;
+    background-color: #fee500;
+}
+
+/* User component */
+.user-component {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.user-component__title {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+}
+
+.user-component__name {
+    width: 202px;
+    padding-top: 15px;
+    color: #1d1d1d;
+    font-size: 24px;
+    font-weight: bold;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.user-component__icon-bl {
+    position: relative;
+    margin-right: 15px;
+}
+
+.user-component__fig {
+    margin: 0;
+    width: 62px;
+    height: 62px;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.user-component__fig img {
+    width: 100%;
+    max-width: 100%;
+}
+
+.user-component__btn {
+    position: absolute;
+    bottom: -5px;
+    right: 4px;
+    width: 20px;
+    height: 20px;
+    border: 3px solid transparent;
+    border-radius: 50%;
+    background-color: #2e2e2e;
+}
+
+.user-component__btn-icon {
+    position: relative;
+    display: block;
+    width: 14px;
+    height: 14px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    overflow: hidden;
+    text-indent: -9999px;
+    cursor: pointer;
+}
+
+.user-component__btn-icon::before,
+.user-component__btn-icon::after {
+    content: '';
+    position: absolute;
+    left: 2px;
+    right: 2px;
+    top: 50%;
+    margin-top: -1px;
+    height: 2px;
+    background-color: #fff;
+}
+
+.user-component__btn-icon::after {
+    transform: rotate(90deg);
+}
+
+/* Tabs */
+.tabs-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 20px;
+}
+
+.tabs-header {
+    margin-right: 30px;
+    padding-top: 15px;
+    width: 280px;
+    border-top: 1px solid #ececec;
+}
+
+.tabs-item {
+    margin-bottom: 12px;
+}
+
+.tabs-link {
+    position: relative;
+    display: block;
+    padding-right: 10px;
+    color: #1d1d1d;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1;
+    text-decoration: none;
+}
+
+.tabs-link::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 0;
+    width: 0;
+    height: 0;
+    border: 3px solid transparent;
+    border-left-color: #1d1d1d;
+}
+
+.tabs-link:hover .tabs-link__icon {
+    background-color: rgba(248, 231, 28, 0.5);
+}
+
+.tabs-link__icon {
+    position: relative;
+    display: inline-block;
+    margin-right: 5px;
+    width: 25px;
+    height: 25px;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    overflow: hidden;
+    text-align: center;
+    vertical-align: middle;
+    transition: background-color 0.25s linear;
+}
+
+.tabs-link__icon img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.tabs-item--active .tabs-link__icon {
+    background-color: #f8e71c;
+}
+
+.tabs-body {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+}
+
+.tabs-content {
+    border: 1px solid transparent;
+    border-radius: 8px;
+}
+
+.tabs-content--colored {
+    border-color: #ececec;
+}
+
+.tabs-content__title {
+    margin-bottom: 15px;
+}
+
+.tabs-content__title span {
+    display: inline-block;
+    padding: 14px 22px;
+    color: #909090;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1;
+    background-color: #f4f5f4;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.tabs-form-btn {
+    padding: 0 28px;
+    margin-bottom: 30px;
+}
+
+/* 404 Page */
+.error-page__wrapper {
+    text-align: center;
+}
+
+.error-page__title {
+    margin-bottom: 80px;
+    color: #373a3c;
+    font-size: 42px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    line-height: 1;
+}
+
+.error-page__fig {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 70px;
+    max-width: 90%;
+}
+
+.error-page__txt {
+    color: #373a3c;
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+.error-page__txt a {
+    color: #0395d8;
+    text-decoration: none;
+}
+
+/* Content Page */
+.content-page-wrapper {
+    padding: 20px 10px 40px;
+}
+
+.content-page-title {
+    position: relative;
+    margin-bottom: 24px;
+    padding-bottom: 18px;
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.content-page-title::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 3%;
+    width: 94%;
+    height: 1px;
+    background-color: #e5e5e5;
+}
+
+.content-wrapper {
+    color: #000;
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    line-height: 1.45;
+}
+
+.content-wrapper p,
+.content-wrapper h2,
+.content-wrapper h3,
+.content-wrapper h4,
+.content-wrapper h5,
+.content-wrapper h6 {
+    margin-bottom: 22px;
+}
+
+.content-wrapper h2 {
+    font-size: 22px;
+}
+
+.content-wrapper h3 {
+    font-size: 20px;
+}
+
+.content-wrapper h4 {
+    font-size: 19px;
+}
+
+.content-wrapper h5,
+.content-wrapper h6 {
+    font-size: 18px;
+}
+
+.content-wrapper a {
+    color: inherit;
+}
+
+.content-wrapper ul,
+.content-wrapper ol {
+    margin-bottom: 24px;
+    padding-left: 14px;
+    list-style-position: inside;
+}
+
+.content-wrapper ul {
+    list-style-type: disc;
+}
+
+.content-wrapper ol {
+    list-style-type: decimal;
+}
+
+.content-wrapper li:not(:last-of-type) {
+    margin-bottom: 10px;
 }
 
 /**
@@ -2293,6 +2858,14 @@ textarea.form-item__area::placeholder {color: #999;}
     .header-shop .header-shop__user-info {
         margin: 15px 0;
     }
+
+    .error-page__fig {
+        max-width: 480px;
+    }
+
+    .content-wrapper {
+        font-size: 16px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -2316,6 +2889,10 @@ textarea.form-item__area::placeholder {color: #999;}
 
     .form-item__wrapper--field {
         padding-right: 50px;
+    }
+
+    .edit-item {
+        width: 23.3%;
     }
 }
 
@@ -2366,6 +2943,10 @@ textarea.form-item__area::placeholder {color: #999;}
 
     .form-item__wrapper--text {
         font-size: 16px;
+    }
+
+    .edit-item {
+        width: 48.3%;
     }
 }
 
@@ -2472,6 +3053,30 @@ textarea.form-item__area::placeholder {color: #999;}
         margin: 6px;
         letter-spacing: 0;
     }
+
+    .error-page__title {
+        margin-bottom: 30px;
+        font-size: 24px;
+    }
+
+    .error-page__fig {
+        margin-bottom: 30px;
+        max-width: 320px;
+    }
+
+    .edit-attr__line {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .edit-attr__title {
+        margin-right: 0;
+        margin-bottom: 6px;
+        width: 100%;
+        text-align: left;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -2492,7 +3097,7 @@ textarea.form-item__area::placeholder {color: #999;}
     .form-item__wrapper--field {
         padding-right: 0;
     }
-
+    
     .form-item__descr {
         margin: 2px 0 10px 0;
         max-width: 100%;
