--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -1,3 +1,7 @@
+/*
+ * Created by Ilya Kobus, Appus Studio LP on 14.11.2018
+ */
+
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -375,8 +379,8 @@ template {
     font-style: normal;
 }
 
-/**
- * Base
+/** 
+ * Base 
  */
 
 *, *::before, *::after {
@@ -453,6 +457,21 @@ button::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
     padding: 0;
     border-style: none;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th,
+td {
+    width: 16.6%;
+    text-align: left;
+}
+
+.table {
+    width: 100%;
+    max-width:100%;
 }
 
 .container {
@@ -557,6 +576,12 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
 
 .t-a-right {
     text-align: right;
+}
+
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
 }
 
 .btn {
@@ -1912,6 +1937,7 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
 }
 
 .form-container-decor--file {
+    margin-bottom: 5px;
     width: 100%;
     background: #f1f0f0 url('../../img/profile-bg-icon.svg') no-repeat center center;
 }
@@ -1926,6 +1952,9 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     position: absolute;
     width: 100%;
     height: 100%;
+    background: transparent no-repeat center center;
+    -webkit-background-size: contain;
+    background-size: contain;
 }
 
 .form-line__wrapper {
@@ -1940,6 +1969,11 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
 
 .form-line__wrapper--min-margin:not(:last-of-type) {
     margin-bottom: 24px;
+}
+
+.form-line__wrapper--unic {
+    display: block;
+    margin-bottom: 10px;
 }
 
 .form-item__wrapper {
@@ -2077,6 +2111,11 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     cursor: pointer;
 }
 
+.form-item__inp--error {
+    background-color: transparent;
+    box-shadow: 0 5px 10px 0 rgba(192, 53, 53, 0.3);
+}
+
 .form-item__inp-file {
     visibility: hidden;
 }
@@ -2196,6 +2235,13 @@ textarea.form-item__area::placeholder {color: #999;}
     font-size: 0;
 }
 
+.edit-photo-descr {
+    margin-bottom: 20px;
+    color: #909090;
+    font-size: 14px;
+    font-style: italic;
+}
+
 .edit-item {
     display: inline-block;
     margin-bottom: 1.7%;
@@ -2282,6 +2328,60 @@ textarea.form-item__area::placeholder {color: #999;}
     font-weight: 900;
 }
 
+.edit-item__category-wr {
+    position: relative;
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    width: 43.9%;
+}
+
+.edit-item__category-wr .tell-form-category__display {
+    padding: 1px 24px 5px 2px;
+    color: #999;
+    font-size: 16px;
+    font-weight: 500;
+    border-bottom-color: #e5e5e5;
+}
+
+.edit-item__category-wr .tell-form-category__list {
+    top: 34px;
+    background-color: #f8f8f8;
+}
+
+.edit-item__category-wr .tell-form-category__item {
+    padding: 4px 28px 6px 2px;
+    color: #999;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: #f8f8f8;
+    border-bottom-color: #e5e5e5;
+}
+
+.edit-item__category-wr .tell-form-category__item--chosen {
+    background-color: rgba(255, 253, 0, 0.36);
+}
+
+.edit-labels .tell-form-list {
+    padding-top: 0;
+}
+
+.edit-labels .tell-form-item span {
+    padding: 10px 9px 10px 30px;
+    color: #fff;
+    background-color: #4a4a4a;
+    background-image: none;
+}
+
+.edit-labels .tell-form-item span i {
+    top: 10px;
+}
+
+.edit-labels .tell-form-item span i::before,
+.edit-labels .tell-form-item span i::after {
+    background-color: #fff;
+}
+
 /* Settings Page */
 .settings-header {
     display: -webkit-box;
@@ -2291,6 +2391,7 @@ textarea.form-item__area::placeholder {color: #999;}
 
 .settings-user {
     margin-right: 30px;
+    min-width: 280px;
     width: 280px;
 }
 
@@ -2313,6 +2414,14 @@ textarea.form-item__area::placeholder {color: #999;}
     width: 70px;
     height: 4px;
     background-color: #fee500;
+}
+
+.settings-item-float {
+    float: left;
+}
+
+.settings-item-float-cont {
+    padding-left: 190px;
 }
 
 /* User component */
@@ -2354,7 +2463,7 @@ textarea.form-item__area::placeholder {color: #999;}
     overflow: hidden;
 }
 
-.user-component__fig img {
+.user-component__img {
     width: 100%;
     max-width: 100%;
 }
@@ -2398,15 +2507,21 @@ textarea.form-item__area::placeholder {color: #999;}
     transform: rotate(90deg);
 }
 
+.user-component__btn-icon--del::after {
+    content: none;
+}
+
+.user-component__file {
+    display: none;
+}
+
 /* Tabs */
 .tabs-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     padding-top: 20px;
 }
 
 .tabs-header {
+    float: left;
     margin-right: 30px;
     padding-top: 15px;
     width: 280px;
@@ -2415,6 +2530,10 @@ textarea.form-item__area::placeholder {color: #999;}
 
 .tabs-item {
     margin-bottom: 12px;
+}
+
+.tabs-item--hide {
+    display: none;
 }
 
 .tabs-link {
@@ -2437,6 +2556,7 @@ textarea.form-item__area::placeholder {color: #999;}
     height: 0;
     border: 3px solid transparent;
     border-left-color: #1d1d1d;
+    opacity: 0.15;
 }
 
 .tabs-link:hover .tabs-link__icon {
@@ -2470,10 +2590,12 @@ textarea.form-item__area::placeholder {color: #999;}
     background-color: #f8e71c;
 }
 
+.tabs-item--active .tabs-link::before {
+    opacity: 1;
+}
+
 .tabs-body {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
+    padding-left: 310px;
 }
 
 .tabs-content {
@@ -2617,6 +2739,62 @@ textarea.form-item__area::placeholder {color: #999;}
 
 .content-wrapper li:not(:last-of-type) {
     margin-bottom: 10px;
+}
+
+/* Table for order page */
+.col-order {
+    width: 17.02%;
+}
+
+.col-date {
+    width: 17.15%;
+}
+
+.col-customer {
+    width: 22.27%;
+}
+
+.col-amount {
+    width: 17.1%;
+}
+
+.col-status {
+    width: 18.19%;
+}
+
+.col-view {
+    width: 7.45%;
+}
+
+.table-orders {
+    color: #1d1d1d;
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    line-height: 1.1;
+}
+
+.table-orders tr {
+    border-bottom: 2px solid #e2e2e2;
+    transition: background-color 0.25s linear;
+}
+
+.table-orders tr:hover {
+    background-color: rgba(246, 226, 70, 0.5);
+}
+
+.table-orders th {
+    padding: 8px 4px 9px 0;
+    font-weight: 500;
+}
+
+.table-orders td {
+    padding: 8px 4px 9px 0;
+}
+
+.table-orders a {
+    color: #008fff;
+    text-decoration: none;
 }
 
 /**
@@ -2862,6 +3040,62 @@ textarea.form-item__area::placeholder {color: #999;}
     .content-wrapper {
         font-size: 16px;
     }
+
+    .tabs-header,
+    .settings-user {
+        width: 240px;
+        min-width: 240px;
+    }
+
+    .user-component__name {
+        width: 163px;
+        padding-top: 20px;
+        font-size: 20px;
+    }
+
+    .tabs-content__title span,
+    .tabs-wrapper .form-item__wrapper--text,
+    .edit-line-desc {
+        font-size: 16px;
+    }
+
+    .tabs-body {
+        padding-left: 270px;
+    }
+
+    .tabs-content .form-line__wrapper,
+    .form-item__inner-wrapper {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+
+    .tabs-content .form-item__wrapper--text {
+        margin-right: 0;
+        padding-right: 10px;
+        width: 100%;
+        text-align: left;
+    }
+
+    .tabs-content .form-item__wrapper--text,
+    .tabs-content .form-item__wrapper--field-settings {
+        padding: 0 10px;
+    }
+
+    .tabs-content .form-item__title {
+        margin-bottom: 6px;
+    }
+
+    .tabs-content .form-item__inner--half {
+        width: 100%;
+    }
+
+    .tabs-content .form-item__inner--txt {
+        margin: 20px 0 5px;
+    }
+
+    .table-orders {
+        font-size: 16px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -2889,6 +3123,14 @@ textarea.form-item__area::placeholder {color: #999;}
 
     .edit-item {
         width: 23.3%;
+    }
+
+    .table-wrapper {
+        overflow-x: auto;
+    }
+
+    .table-orders {
+        min-width: 780px;
     }
 }
 
@@ -2943,6 +3185,48 @@ textarea.form-item__area::placeholder {color: #999;}
 
     .edit-item {
         width: 48.3%;
+    }
+
+    .settings-header {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+
+    .settings-user {
+        margin-right: 0;
+        margin-bottom: 20px;
+        width: 100%;
+        min-width: auto;
+    }
+
+    .user-component__name {
+        width: 220px;
+    }
+
+    .settings-general__title {
+        padding-bottom: 15px;
+    }
+
+    .tabs-header {
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+        width: 100%;
+        min-width: auto;
+        float: none;
+        border-bottom: 1px solid #ececec;
+    }
+
+    .tabs-body {
+        padding-left: 0;
+    }
+
+    .edit-item__category-wr {
+        width: 100%;
+        float: none;
+    }
+
+    .edit-item__category-wr .tell-form-category__list {
+        top: 56px;
     }
 }
 
@@ -3093,7 +3377,7 @@ textarea.form-item__area::placeholder {color: #999;}
     .form-item__wrapper--field {
         padding-right: 0;
     }
-
+    
     .form-item__descr {
         margin: 2px 0 10px 0;
         max-width: 100%;
@@ -3104,6 +3388,10 @@ textarea.form-item__area::placeholder {color: #999;}
     .form-item__inp-descr {
         padding-left: 0;
         font-size: 12px;
+    }
+
+    .edit-item__category-wr .tell-form-category__list {
+        top: 64px;
     }
 }
 
