[+] Add disabled (unremovable) categories into settings

--- a/public/css/merchants/app.css
+++ b/public/css/merchants/app.css
@@ -115,3 +115,9 @@ input[type="submit"].loading {
 .img-fluid {
     width: 100%;
 }
+
+li.tell-form-item__disabled span {
+    background-color: #b5b5b5!important;
+    padding-left: 10px!important;
+}
+
