[!] Minor bug fix: - return 'store' to product JSON - fix merchant settings CSS - rename background field

--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -2001,6 +2001,9 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
     padding-right: 110px;
+}
+
+form[name="changes-password"] .form-item__wrapper--field {
     width: calc(100% - 190px);
 }
 
