--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -802,6 +802,9 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     margin: 0 16px;
 }
 
+.header-shop__add {
+    flex-basis: 30%;
+}
 .user__icon {
     margin-right: 16px;
 }
