--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -345,32 +345,32 @@ template {
  */
 @font-face {
     font-family: 'Charter';
-    src: url('../fonts/Charter.woff2') format('woff2'),
-    url('../fonts/Charter.woff') format('woff');
+    src: url('../../fonts/Charter.woff2') format('woff2'),
+    url('../../fonts/Charter.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('../fonts/Lato-Regular.woff2') format('woff2'),
-    url('../fonts/Lato-Regular.woff') format('woff');
+    src: url('../../fonts/Lato-Regular.woff2') format('woff2'),
+    url('../../fonts/Lato-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('../fonts/Lato-Bold.woff2') format('woff2'),
-    url('../fonts/Lato-Bold.woff') format('woff');
+    src: url('../../fonts/Lato-Bold.woff2') format('woff2'),
+    url('../../fonts/Lato-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('../fonts/Lato-Light.woff2') format('woff2'),
-    url('../fonts/Lato-Light.woff') format('woff');
+    src: url('../../fonts/Lato-Light.woff2') format('woff2'),
+    url('../../fonts/Lato-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
@@ -405,7 +405,7 @@ body {
     font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", sans-serif;
     font-weight: normal;
     line-height: 1.33;
-    background: #050607 url('../img/body-bg.jpg')no-repeat top center;
+    background: #050607 url('../../img/body-bg.jpg')no-repeat top center;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
     -webkit-text-size-adjust: 100%;
@@ -720,8 +720,8 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     width: 52px;
     /*height: 67px;*/
     height: 52px;
-    /*background: transparent url('../img/logo.svg')no-repeat center center;*/
-    background: transparent url('../img/logo-min.svg')no-repeat center center;
+    /*background: transparent url('../../img/logo.svg')no-repeat center center;*/
+    background: transparent url('../../img/logo-min.svg')no-repeat center center;
     -webkit-background-size: contain;
     background-size: contain;
     overflow: hidden;
@@ -802,9 +802,6 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     margin: 0 16px;
 }
 
-.header-shop__add {
-    flex-basis: 30%;
-}
 .user__icon {
     margin-right: 16px;
 }
@@ -867,6 +864,7 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     border: 1px solid #ffe447;
     border-radius: 5px;
     padding:5px 15px;
+    text-align: center;
 }
 .user__status>.user__status-text {
     color: #ffe447;
@@ -910,7 +908,7 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     width: 12px;
     height: 12px;
     vertical-align: sub;
-    background: transparent url('../img/logout-icon.svg')no-repeat center center;
+    background: transparent url('../../img/logout-icon.svg')no-repeat center center;
     -webkit-background-size: contain;
     background-size: contain;
 }
@@ -1107,11 +1105,11 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
 }
 
 .icon-user {
-    background-image: url('../img/icons/user.svg');
+    background-image: url('../../img/icons/user.svg');
 }
 
 .icon-password {
-    background-image: url('../img/icons/password.svg');
+    background-image: url('../../img/icons/password.svg');
 }
 
 /* Forgot pass page */
@@ -1637,7 +1635,7 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
     width: 18px;
     height: 18px;
     text-indent: -9999px;
-    background: transparent url('../img/search-icon.svg')no-repeat center center;
+    background: transparent url('../../img/search-icon.svg')no-repeat center center;
     -webkit-background-size: contain;
     background-size: contain;
     overflow: hidden;
@@ -2006,7 +2004,7 @@ textarea::-moz-placeholder, textarea:-moz-placeholder {opacity: 1}
 .form-container-decor--file {
     margin-bottom: 5px;
     width: 100%;
-    background: #f1f0f0 url('../img/profile-bg-icon.svg') no-repeat center center;
+    background: #f1f0f0 url('Zzimg/profile-bg-icon.svg') no-repeat center center;
 }
 
 .form-container-decor-inner {
@@ -3899,11 +3897,11 @@ textarea.form-item__area::placeholder {color: #999;}
 
 @media ( min-device-pixel-ratio: 2) {
     body {
-        background-image: url('../img/body-bg-2x.jpg');
+        background-image: url('../../img/body-bg-2x.jpg');
     }
 }
 @media (min-device-pixel-ratio: 3) {
     body {
-        background-image: url('../img/body-bg-3x.jpg');
+        background-image: url('../../img/body-bg-3x.jpg');
     }
 }
